fixed top of chat window cut off

--- a/frontend/chat.css
+++ b/frontend/chat.css
@@ -2,10 +2,14 @@ body {
     font: 25px Helvetica, Arial;
 }
 
+#chatWindow {
+    background: rgb(217, 250, 215);
+    height: Calc(100vh - 35px);
+}
+
 #submitForm {
-    /* width:100%;
-    position: fixed; */
     bottom: 0;
+    background: rgb(217, 250, 215);
 }
 
 #submitForm input {
@@ -14,6 +18,7 @@ body {
 
 #submitForm button {
     width: 14%;
+    background: rgb(17, 248, 0);
 }
 
 .anchorBottom {
